--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
     Al and Bob Pelton, the fathers of spudnuts, created the recipe in Idaho.
 </h2>
 
-<p><a href="the history of the spudnut.html/" target=_blank">page 2</a></p>
+<a href="page2.html">histoy of the spudnut</a>
 
 </body>
 
