--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </h2>
 <hr>
 <p><a href="page2.html" target=_blank">page 2</a></p>
-
+<p><a href="8b.html" target=_blank">assignemnt 8B</a></p>
 </body>
 
     
