--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 
 <head>
 <title>index<title></title>
+<link rel="stylesheet" type="text/css" href="indexstylesheet.css">
 </head>
 
 <body>
-    <p> The delicious treat of yesteryear.</p>
+    <p>COMM 150: Intro to New Media</p>
 
 <img src="graphics/spudnut.jpg">
 
 <h1>
-    Spudnuts: a potato delicacy
+    Fields Utz
 </h1>
 <h2>
-    Al and Bob Pelton, the fathers of spudnuts, created the recipe in Idaho.
+    Table of Contents...
+    
 </h2>
 <hr>
-<p><a href="page2.html" target=_blank">page 2</a></p>
-<p><a href="8b.html" target=_blank">assignemnt 8B</a></p>
+<h3><a href="spudnut.html" target=_blank">Spudnut</a></h3>
+<h4><a href="8b.html" target=_blank">Assignemnt 8B</a></h4>
 </body>
 
     
