--- a/spudnut.html
+++ b/spudnut.html
@@ -6,14 +6,17 @@
 </head>
 
 <h1>
-    Spudnuts: the potato <br>
-    delicacy of the past
+    Spudnuts
 </h1>
 
 <hr>
+<div id="pic1">
 <img src="graphics/spudnut.jpg">
+</div>
+
+
 <body>
-    <p> Everyday when my grandmother <br>
+    <h2> Everyday when my grandmother <br>
         walked home from school in her <br>
         hometwon of El Dorado, Arkansas, <br>
         she would stop by the Spudnut <br>
@@ -40,9 +43,13 @@
        
    
        
-<h2>
-    <img src="graphics/spudtower2.jpg">
-</h2>
+    </h2>
+</div>
+   
+<div id="pic2">
+<img src="graphics/spudtower2.jpg">
+</div>
+
 
 <h3>3–4 Yukon Gold potatoes <br>
     2 Cups whole milk (as needed) <br>
