--- a/creationstory.html
+++ b/creationstory.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Creation story.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Creation story" startnode="1" creator="Twine" creator-version="2.3.15" ifid="345404F2-FA89-4FAB-A79C-1C3D9790C8B3" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="start" tags="" position="274.5,12.5" size="100,100">In the beginning there was only an egg
+<tw-storydata name="Creation story" startnode="1" creator="Twine" creator-version="2.3.15" ifid="345404F2-FA89-4FAB-A79C-1C3D9790C8B3" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+
+
+
+tw=sidebar{
+  #display:none
+  
+ ]</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="start" tags="" position="274,12" size="100,100">
+
+In the beginning there was only an egg
 Existing in a sea of endless dark
 (mouseover: &quot;egg&quot;) [
 [[crack the egg]]
 
-[[sleep]] ]</tw-passagedata><tw-passagedata pid="2" name="crack the egg" tags="" position="452.5,78.5" size="100,100">The egg (text-style:&quot;shudder&quot;)[explodes] in every direction 
+[[sleep]] ]</tw-passagedata><tw-passagedata pid="2" name="crack the egg" tags="" position="452,78" size="100,100">The egg (text-style:&quot;shudder&quot;)[explodes] in every direction 
 The shell rains down to form a vast sand desert
 
 The force of the explosion shoots up to form a 
@@ -24,7 +33,7 @@ swirling mass of energy in the sky
 
 [[add water]]
 
-[[add plants]] ]</tw-passagedata><tw-passagedata pid="3" name="add water" tags="" position="46.5,274.5" size="100,100">Open your mouth and let your saliva (text-style: &quot;buoy&quot;) [drip] onto the sand.
+[[add plants]] ]</tw-passagedata><tw-passagedata pid="3" name="add water" tags="" position="46,274" size="100,100">Open your mouth and let your saliva (text-style: &quot;buoy&quot;) [drip] onto the sand.
 
 (mouseover: &quot;drip&quot; )
 
@@ -35,7 +44,7 @@ The plant thickens and extends up. ]
 [[add more plants]]
 
 [[create animals]]
-]</tw-passagedata><tw-passagedata pid="4" name="add plants" tags="" position="806.5,234.5" size="100,100">Pull out a hair from your ear 
+]</tw-passagedata><tw-passagedata pid="4" name="add plants" tags="" position="806,234" size="100,100">Pull out a hair from your ear 
 (mouseover: &quot;hair&quot;) [
 Plant it in the sand]
 (mouseover: &quot;sand&quot;) [
@@ -45,14 +54,14 @@ But quickly (text-style:&quot;subscript&quot;,&quot;blur&quot;)[ fades] ]
 (mouseover:&quot;quickly&quot;) [
 [[add water]]
 
-[[add plants]] ]</tw-passagedata><tw-passagedata pid="5" name="create animals" tags="" position="549.5,389.5" size="100,100">From under your fingernails 
+[[add plants]] ]</tw-passagedata><tw-passagedata pid="5" name="create animals" tags="" position="549,389" size="100,100">From under your fingernails 
 You gather the (text-style:&quot;smear&quot;)[ scraps ] of your creations
 (mouseover: &quot;scraps&quot;)
 [Mold the scraps into a creature]
 (mouseover: &quot;creature&quot;)
 [ [[With four legs]] 
 [[With two legs]] ]
-</tw-passagedata><tw-passagedata pid="6" name="add more plants" tags="" position="2.5,433.5" size="100,100">Take another few hairs 
+</tw-passagedata><tw-passagedata pid="6" name="add more plants" tags="" position="2,433" size="100,100">Take another few hairs 
 Tangle them
 And gently (text-style:&quot;subscript&quot;)[ plant] them near the pool.
 
@@ -63,7 +72,7 @@ And gently (text-style:&quot;subscript&quot;)[ plant] them near the pool.
 (mouseover: &quot;leaves&quot;) [
 [[rest a while]]
 
-[[continue to create]] ]</tw-passagedata><tw-passagedata pid="7" name="rest a while" tags="" position="322.5,424.5" size="100,100">Relax in the crips shade of the grove and listen to the (text-style:&quot;bold&quot;,&quot;wavy-underline&quot;)[ water bubble softly] from the spring
+[[continue to create]] ]</tw-passagedata><tw-passagedata pid="7" name="rest a while" tags="" position="322,424" size="100,100">Relax in the crips shade of the grove and listen to the (text-style:&quot;bold&quot;,&quot;wavy-underline&quot;)[ water bubble softly] from the spring
 
 (mouseover: &quot;listen&quot;)
 
@@ -78,7 +87,7 @@ And gently (text-style:&quot;subscript&quot;)[ plant] them near the pool.
 
 [[create birds]] 
 
-[[rest a while]]]</tw-passagedata><tw-passagedata pid="8" name="continue to create" tags="" position="344.5,630.5" size="100,100">This world needs more life...
+[[rest a while]]]</tw-passagedata><tw-passagedata pid="8" name="continue to create" tags="" position="344,630" size="100,100">This world needs more life...
 
 [(mouseover: &quot;...&quot;)
 [[create birds]]
@@ -95,7 +104,7 @@ And gently (text-style:&quot;subscript&quot;)[ plant] them near the pool.
 
 [[create animals]]
 
-[[add plants]] ]</tw-passagedata><tw-passagedata pid="9" name="create birds" tags="" position="61.5,629.5" size="100,100">(text-style:&quot;sway&quot;)[ Reach up
+[[add plants]] ]</tw-passagedata><tw-passagedata pid="9" name="create birds" tags="" position="61,629" size="100,100">(text-style:&quot;sway&quot;)[ Reach up
 
 (mouseover: &quot;up&quot;) [
 Pick a leaf off of one the tallest trees ]
@@ -117,7 +126,7 @@ Out fly $number birds]&lt;shout| (click: ?shout) [
 
 [[drink]] ]
 
-]] ]</tw-passagedata><tw-passagedata pid="10" name="drink" tags="" position="168.5,828.5" size="100,100">(text-style:&quot;sway&quot;)[ Kneel down to the pool
+]] ]</tw-passagedata><tw-passagedata pid="10" name="drink" tags="" position="168,828" size="100,100">(text-style:&quot;sway&quot;)[ Kneel down to the pool
 Gaze at your physical form in wonder
 There is so much it can do
 This world is of you
@@ -125,7 +134,7 @@ And you are of this world
 
 [[sleep]]
 
-[[continue to create]] ]</tw-passagedata><tw-passagedata pid="11" name="With four legs" tags="" position="929.5,355.5" size="100,100">Shape the legs
+[[continue to create]] ]</tw-passagedata><tw-passagedata pid="11" name="With four legs" tags="" position="929,355" size="100,100">Shape the legs
 
 (mouseover: &quot;legs&quot;)
 [ [(text-style:&quot;expand&quot;)[ Long] like the length of the wind]
@@ -140,7 +149,7 @@ And you are of this world
 [ 
 [[Shape four heads]]
 
-[[Shape two heads]] ] ]</tw-passagedata><tw-passagedata pid="12" name="With two legs" tags="" position="720.5,563.5" size="100,100">Shape the legs 
+[[Shape two heads]] ] ]</tw-passagedata><tw-passagedata pid="12" name="With two legs" tags="" position="720,563" size="100,100">Shape the legs 
 
 (mouseover: &quot;Shape&quot;) [ [Textured like (text-style:&quot;italic&quot;)[ sand] ]
 
@@ -156,7 +165,7 @@ And you are of this world
 
 [[Shape one head]] ] ]
 
-</tw-passagedata><tw-passagedata pid="13" name="Shape four heads" tags="" position="734.5,882.5" size="100,100">Hold the creature to your breast
+</tw-passagedata><tw-passagedata pid="13" name="Shape four heads" tags="" position="734,882" size="100,100">Hold the creature to your breast
 (mouseover: &quot;breast&quot;)
 [Let them (text-style:&quot;italic&quot;)[ drink] life in]
 (mouseover: &quot;life&quot;)
@@ -173,7 +182,7 @@ And dance]&lt;shout|
 [[create animals]]
 
 [[DANCE!]] ] ]
-</tw-passagedata><tw-passagedata pid="14" name="Shape two heads" tags="" position="944.5,581.5" size="100,100">Hold the creature to your breasts
+</tw-passagedata><tw-passagedata pid="14" name="Shape two heads" tags="" position="944,581" size="100,100">Hold the creature to your breasts
 (mouseover: &quot;breasts&quot;)
 [Let them (text-style:&quot;italic&quot;)[ drink] life in]
 (mouseover: &quot;life&quot;)
@@ -190,10 +199,10 @@ And sing]&lt;shout|
 [[create animals]]
 
 [[SING!]] ] ]
-</tw-passagedata><tw-passagedata pid="15" name="DANCE!" tags="" position="721.5,1237.5" size="100,100">(text-style:&quot;bold&quot;,&quot;smear&quot;)[ Hand in hand
+</tw-passagedata><tw-passagedata pid="15" name="DANCE!" tags="" position="721,1237" size="100,100">(text-style:&quot;bold&quot;,&quot;smear&quot;)[ Hand in hand
 On the edge of the sand
 They danced By the light 
-Of the moon]</tw-passagedata><tw-passagedata pid="16" name="SING!" tags="" position="913.5,769.5" size="100,100">
+Of the moon]</tw-passagedata><tw-passagedata pid="16" name="SING!" tags="" position="913,769" size="100,100">
 
 
 (text-style:&quot;bold&quot;,&quot;smear&quot;,&quot;sway&quot;)[[ We are the rising sun
@@ -204,7 +213,7 @@ And we remember]
 (mouseover: &quot;remember&quot;) [We are the setting sun 
 We are the change]
 (mouseover: &quot;setting&quot;) [We are the ancestors of tomorrow
-And we are rising] ]</tw-passagedata><tw-passagedata pid="17" name="Shape three heads" tags="" position="415.5,884.5" size="100,100">Cradle the creature in you hand
+And we are rising] ]</tw-passagedata><tw-passagedata pid="17" name="Shape three heads" tags="" position="415,884" size="100,100">Cradle the creature in you hand
 (mouseover: &quot;hand&quot;)
 [Touch each head to your nostril
 Gifting gills]
@@ -228,7 +237,7 @@ And dance]&lt;shout|
 
 [[create animals]]
 
-[[DANCE!]] ]]</tw-passagedata><tw-passagedata pid="18" name="Shape one head" tags="" position="570.5,844.5" size="100,100">Cradle the creature in you hand
+[[DANCE!]] ]]</tw-passagedata><tw-passagedata pid="18" name="Shape one head" tags="" position="570,844" size="100,100">Cradle the creature in you hand
 (mouseover: &quot;hand&quot;)
 [Grasp both ends and stretch]
 
@@ -258,7 +267,7 @@ And sing]&lt;shout|
 
 [[create animals]]
 
-[[SING!]] ]]</tw-passagedata><tw-passagedata pid="19" name="sleep" tags="" position="94.5,99.5" size="100,100">(text-style:&quot;sway&quot;)[ You lay dreaming inside the egg
+[[SING!]] ]]</tw-passagedata><tw-passagedata pid="19" name="sleep" tags="" position="94,99" size="100,100">(text-style:&quot;sway&quot;)[ You lay dreaming inside the egg
 As you have been for all of time]
 
 (mouseover: &quot;time&quot;)+(text-style:&quot;sway&quot;) [Something stirs within you
