--- a/creationstory.html
+++ b/creationstory.html
@@ -12,11 +12,9 @@
 <tw-storydata name="Creation story" startnode="1" creator="Twine" creator-version="2.3.15" ifid="345404F2-FA89-4FAB-A79C-1C3D9790C8B3" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
 
-
-tw=sidebar{
-  #display:none
-  
- ]</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="start" tags="" position="274,12" size="100,100">
+tw-icon[title="Undo"], tw-icon[title="Redo"] {
+    display: none;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="start" tags="" position="274,12" size="100,100">
 
 In the beginning there was only an egg
 Existing in a sea of endless dark
